--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">android_kotlin_extensions</string>
+    <string name="start_camera">カメラ起動</string>
 </resources>
